# ie0217

./: .gitignore  README.md
.github/workflows/: ci-cd-calc.yml  ci-cd.yml  tarea7.yml
Laboratorios/Laboratorio1/: main.cpp
Laboratorios/Laboratorio10/: CMakeLists.txt  README.md
Laboratorios/Laboratorio10/.github/workflows/: ci-cd-calc.yml
Laboratorios/Laboratorio10/src/: Calculator.cpp  Calculator.hpp
Laboratorios/Laboratorio10/tests/: test_calculator.cpp
Laboratorios/Laboratorio11/: README.md
Laboratorios/Laboratorio2/: README.md
Laboratorios/Laboratorio3/: README.md
Laboratorios/Laboratorio4/: README.md
Laboratorios/Laboratorio5/: README.md
Laboratorios/Laboratorio6/: Makefile  README.md
Laboratorios/Laboratorio7/: README.md
Laboratorios/Laboratorio8/: README.md  ejercicio2.cpp  ejercicio5.cpp
Laboratorios/Laboratorio9/: README.md
Sesiones/Sesion1/: README.md  checkout_diff.cpp  helloWorld.cpp  holaMundo.cpp  holaMundo1.cpp  holaMundo2.cpp  otroArchivo.cpp  otroArchivo2.cpp  stash.cpp
Sesiones/Sesion10/: README.md
Sesiones/Sesion11/: README.md
Sesiones/Sesion12/: README.md
Sesiones/Sesion13/: README.md  mongodb.cpp  mongodb_atlas1.cpp  mongodb_atlas2.cpp
Sesiones/Sesion14/: README.md
Sesiones/Sesion15/: README.md
Sesiones/Sesion16/: README.md
Sesiones/Sesion2/: README.md  alcanceVariables1.cpp  alcanceVariables2.cpp  anidacion.cpp  argumentosFuncion.cpp  argumentosMain1.cpp  argumentosMain2.cpp  argumentosMain3.cpp  array.cpp  do_while.cpp  entradaUsuario.cpp  extern1.cpp  extern2.cpp  forLoop1.cpp  forLoop2.cpp  funciones.cpp  helloWorld_ensamblador.cpp  operadorTernario1.cpp  operadorTernario2.cpp  prototipoFuncion.cpp  return.cpp  sobrecargaFunciones1.cpp  sobrecargaFunciones2.cpp  sobrecargaFunciones3.cpp  string.cpp  struct1.cpp  struct2.cpp  switch_case1.cpp  switch_case2.cpp  switch_case3.cpp  switch_case4.cpp  switch_case5.cpp  switch_case6.cpp  valorDefecto1.cpp  valorDefecto2.cpp  valorDefecto3.cpp  valorDefecto4.cpp  variableEstatica.cpp  whileLoop.cpp
Sesiones/Sesion3/: README.md  define1.cpp  define2.cpp  ej_enumcito1.cpp  ej_enumcito2.cpp  enum1_1.cpp  enum1_2.cpp  enum2.cpp  enum3.cpp  go_to.cpp  headerFile1.cpp  headerFile2.cpp  memoria.cpp  ptrDobles1.cpp  ptrDobles2.cpp  ptrDobles3.cpp  ptrDobles4.cpp  ptr_array.cpp  ptr_array_traducido.cpp  ptr_funciones1.cpp  ptr_funciones2.cpp  ptr_funciones3.cpp  ptr_struct1.cpp  ptr_struct2.cpp  ptr_struct3.cpp  punteros1.cpp  punteros2.cpp  recursividad.cpp  sum.cpp  sum.hpp  typeCasting1.cpp  typeCasting2.cpp
Sesiones/Sesion4/: README.md  acceso_herencia.cpp  boilerplate_clase1.cpp  boilerplate_clase2.cpp  boilerplate_clase3.cpp  boilerplate_clase4.cpp  class.cpp  (+21 more)
Tareas/Tarea7/: CMakeLists.txt  README.md
Tareas/Tarea7/include/: Circuitos.hpp  Componente.hpp  Inventario.hpp
Tareas/Tarea7/src/: Circuitos.cpp  Componente.cpp  Inventario.cpp
Tareas/Tarea7/tests/: CMakeLists.txt  CircuitosTests.cpp  ComponenteTests.cpp  InventarioFunctionalTests.cpp  InventarioTests.cpp
(+428 files in other folders)
